# atomrnx_rtklib

RTKLIB-nikita1/: .gitignore
RTKLIB-nikita1/app/convbin/: CMakeLists.txt  build_gui.bat  convbin.c
RTKLIB-nikita1/app/convbin/gcc/: 020800000_R_20180390842_02H_MN.18n  G0208A18.18n  G0208A18.nav  GOALLA17.335  GOALLA17.335.ws  GOALLA17.nav  MSM7.nav  OALL00000_R_20173351618_01H_MN.RNX  a  c.bat  convbin.exe.stackdump  makefile  nik_log.txt
RTKLIB-nikita1/app/rtknavi/: instrdlg.cpp  instrdlg.dfm  mondlg.cpp  navimain.dfm  navimain.h  rtknavi.cbproj  rtknavi.stat
RTKLIB-nikita1/src/: CMakeLists.txt  convrnx.c  rcvraw.c  rinex.c  rtcm3.c  rtkcmn.c  rtklib.h  rtksvr.c
RTKLIB-nikita1/src/rcv/: atom.c  atomrnx.c  septentrio.c
